@@ -1,5 +1,5 @@
 # Host: Little-endian Alpha running OSF/1-3.x and higher using procfs
-XDEPFILES= 
+XDEPFILES= ser-tcp.o ser-pipe.o
 XM_FILE= xm-alphaosf.h
 NAT_FILE= nm-osf3.h
 NATDEPFILES= infptrace.o inftarg.o corelow.o alpha-nat.o fork-child.o \
