@@ -1,3 +1,15 @@
+Fri Apr 28 12:21:28 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	From Tim Mooney <mooney@dogbert.cc.ndsu.nodak.edu>:
+	* target.c (do_monitor_command): Cast tcomplain to correct
+ 	function type in comparison.
+
+Fri Apr 28 11:43:05 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	From 2000-04-25 Guy Harris <guy@netapp.com>:
+	* config/alpha/alpha-osf3.mh (XDEPFILES): Add ser-tcp.o and
+ 	ser-pipe.o
+
 2000-04-27  Michael Snyder  <msnyder@seadog.cygnus.com>
 
 	* jv-valprint.c (java_val_print): Add arg declaration, 
